--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ p {
 }
 .container {
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   padding: 0 20px;
   border: 1px solid #5295b6;
   border-radius: 10px;
@@ -59,6 +59,11 @@ p {
 }
 .card-title {
   margin: 0;
+}
+.github-link {
+  font-size: 12px;
+  margin-left: 15%;
+  padding-bottom: 20px;
 }
 .temperature {
   font-size: 30px;
