--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 form {
-  width: 82%;
+  width: 83%;
   display: block;
-  margin: 25px auto 0;
+  margin: 0 auto;
 }
-
 h1 {
   font-size: 36px;
   font-weight: 700;
@@ -19,6 +18,11 @@ h3 {
   line-height: 36px;
   margin: 10px 0;
 }
+h7 {
+  margin-left: 25%;
+  font-size: 12px;
+  padding-bottom: 20px;
+}
 ul {
   padding: 0;
   margin: 20px, 10px;
@@ -27,8 +31,7 @@ ul {
 ul :hover {
   background: #5295b6;
   color: #fff;
-  font-weight: 700;
-  font-size: 18px;
+  font-weight: 600;
   transition: all 250ms ease-in-out;
 }
 li {
@@ -42,47 +45,47 @@ i {
 p {
   font-size: 16px;
   font-weight: 400;
-  margin: 15px 0;
+  margin: 5px 10px;
 }
 .container {
+  max-width: 700px;
   margin-top: 30px;
-  margin-bottom: 15px;
-  padding: 0 20px;
+  margin-bottom: 5px;
+  padding: 35px 0;
   border: 1px solid #5295b6;
   border-radius: 10px;
   background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
 }
-
+.btn-dark {
+  margin-left: 15px;
+}
 .card {
   border-radius: 10px;
-  column-width: 80%;
+  padding: 20px 12px;
 }
 .card-title {
   margin: 0;
+  margin-bottom: 12px;
 }
-.github-link {
-  font-size: 12px;
-  margin-left: 15%;
-  padding-bottom: 20px;
-}
+
 .temperature {
-  font-size: 30px;
+  font-size: 32px;
 }
 .list-group-item {
-  padding: 20px 12px;
+  padding: 10px 12px;
   border-radius: 10px;
 }
 .units {
-  font-weight: 300;
-  font-size: 20px;
-}
-#current-location-search {
-  margin-left: 15px;
+  font-weight: 500;
+  font-size: 14px;
+  position: relative;
+  top: -12px;
 }
 
 #live-day-time {
   font-size: 18px;
-  opacity: 0.7;
+  opacity: 0.6;
+  margin: 0;
 }
 #celcius-link {
   text-decoration: none;
