--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,9 @@ h3 {
   line-height: 36px;
   margin: 10px 0;
 }
+h3 .units :hover {
+  font-weight: 700;
+}
 h7 {
   margin-left: 25%;
   font-size: 12px;
@@ -31,7 +34,6 @@ ul {
 ul :hover {
   background: #5295b6;
   color: #fff;
-  font-weight: 600;
   transition: all 250ms ease-in-out;
 }
 li {
@@ -67,7 +69,6 @@ p {
   margin: 0;
   margin-bottom: 12px;
 }
-
 .temperature {
   font-size: 32px;
 }
@@ -81,7 +82,6 @@ p {
   position: relative;
   top: -12px;
 }
-
 #live-day-time {
   font-size: 18px;
   opacity: 0.6;
