--- a/src/style.css
+++ b/src/style.css
@@ -33,17 +33,15 @@ ul {
   border-radius: 10px;
 }
 ul :hover {
-  background: #5295b6;
-  color: #fff;
+  background: rgba(82, 149, 182, 0.3);
   transition: all 250ms ease-in-out;
 }
 li {
   font-size: 14px;
 }
-i {
-  font-size: 20px;
-  opacity: 0.7;
-  padding: 0 8px;
+img {
+  font-size: 14px;
+  max-height: 60px;
 }
 p {
   font-size: 16px;
@@ -64,11 +62,11 @@ p {
 }
 .card {
   border-radius: 10px;
-  padding: 20px 12px;
+  padding: 12px 12px;
+  background: rgba(82, 149, 182, 0.3);
 }
 .card-title {
   margin: 0;
-  margin-bottom: 12px;
 }
 .temperature {
   font-size: 32px;
