--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,7 @@ p {
 }
 .card {
   border-radius: 10px;
-  padding: 12px 12px;
+  padding: 10px 12px 15px;
   background: rgba(82, 149, 182, 0.3);
 }
 .card-title {
