--- a/src/style.css
+++ b/src/style.css
@@ -19,10 +19,8 @@ h3 {
   line-height: 36px;
   margin: 10px 0;
 }
-h7 {
-  margin-left: 25%;
-  font-size: 12px;
-  padding-bottom: 20px;
+a {
+  text-decoration: none;
 }
 ul {
   padding: 0;
@@ -30,7 +28,7 @@ ul {
   border-radius: 10px;
 }
 ul :hover {
-  background: rgba(82, 149, 182, 0.3);
+  background: rgba(33, 37, 41, 0.05);
   transition: all 250ms ease-in-out;
 }
 li {
@@ -41,7 +39,7 @@ img {
   max-height: 60px;
 }
 p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   margin: 5px 10px;
 }
@@ -52,7 +50,7 @@ p {
   padding: 35px 0;
   border: 1px solid #5295b6;
   border-radius: 10px;
-  background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
 .btn-dark {
   margin-left: 15px;
@@ -60,37 +58,37 @@ p {
 .card {
   border-radius: 10px;
   padding: 10px 12px 15px;
-  background: rgba(82, 149, 182, 0.3);
+  background: rgba(33, 37, 41, 0.05);
 }
 .card-title {
+  margin: 0;
+}
+.github-link {
+  display: block;
+  text-align: center;
+  font-size: 12px;
+  padding-bottom: 20px;
+}
+.list-group-item {
+  padding: 10px 12px;
+  border-radius: 10px;
+}
+.live-day-time {
+  font-size: 18px;
+  opacity: 0.6;
   margin: 0;
 }
 .temperature {
   font-size: 32px;
 }
-.temperatureDisplay .active {
+.temperature-display .active {
   color: #212529;
   font-weight: 700;
   cursor: default;
-}
-.list-group-item {
-  padding: 10px 12px;
-  border-radius: 10px;
 }
 .units {
   font-weight: 500;
   font-size: 14px;
   position: relative;
   top: -12px;
-}
-#live-day-time {
-  font-size: 18px;
-  opacity: 0.6;
-  margin: 0;
-}
-#celcius-link {
-  text-decoration: none;
-}
-#fahrenheit-link {
-  text-decoration: none;
 }
